finished getPosts
